syntax = "proto3";

package im.ghasedak.rpc;

option java_package = "im.ghasedak.rpc.contact";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "api/user.proto";
import "rpc/misc.proto";

service ContactService {
    rpc GetContacts (RequestGetContacts) returns (ResponseGetContacts);
    rpc AddContact (RequestAddContact) returns (ResponseAddContact);
    rpc RemoveContact (RequestRemoveContact) returns (ResponseVoid);
    rpc SearchContacts (RequestSearchContacts) returns (ResponseSearchContacts);
}

message RequestGetContacts {
}

message ResponseGetContacts {
    repeated int32 contact_user_ids = 1;
}

message RequestAddContact {
    google.protobuf.StringValue local_name = 1;
    im.ghasedak.api.ContactRecord contact_record = 2;
}

message ResponseAddContact {
    int32 contact_user_id = 1;
}

message RequestRemoveContact {
    int32 contact_user_id = 1;
}

message RequestSearchContacts {
    string query = 1;
}

message ResponseSearchContacts {
    repeated int32 contact_user_ids = 1;
}